# Sol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.bat  SetupDev.bat  SetupDx12.bat  SetupNoImGui.bat  SetupNoImGuiDev.bat  SetupNoImGuiDx12.bat  SetupNoImGuiVK.bat  SetupVK.bat
ThirdPartyLibraries/DirectXMath/: CMakeLists.txt  README.md
ThirdPartyLibraries/DirectXMath/Extensions/: DirectXMathAVX.h  DirectXMathAVX2.h  DirectXMathBE.h  DirectXMathF16C.h  DirectXMathFMA3.h  DirectXMathFMA4.h  DirectXMathSSE3.h  DirectXMathSSE4.h
ThirdPartyLibraries/DirectXMath/Inc/: DirectXCollision.h
app/: CMakeLists.txt
app/exports/: BoundingVolumes.hpp  Camera.hpp  Exception.hpp  GraphicsTechniqueExtension.hpp  IModel.hpp  ISharedDataContainer.hpp  Material.hpp  MeshBundle.hpp  Model.hpp  ModelBundle.hpp  ModelContainer.hpp  Shader.hpp  Texture.hpp
app/includes/: App.hpp  BasicMeshBundles.hpp  BasicModelInputs.hpp  BasicModels.hpp  BlinnPhongLightTechnique.hpp  CameraManagerSol.hpp  ColourTexture.hpp  ConfigManager.hpp  ConversionUtilities.hpp  DefaultRenderPass.hpp  Engine.hpp  ExtensionManager.hpp  ExternalBindingIndices.hpp  GLTFObject.hpp  GraphicsPipelineManager.hpp  GraphicsTechniqueExtensionBase.hpp  IniParser.hpp  LightSource.hpp  MaterialBase.hpp  MeshBoundImpl.hpp  MeshBounds.hpp  MeshBundleBase.hpp  MeshletMaker.hpp  Model.hpp  ModelBase.hpp  ModelContainer.hpp  ModelProcessor.hpp  ModuleTypes.hpp  ObjectManager.hpp  RenderPassManager.hpp  RendererTypes.hpp  RendererUtility.hpp  ReusableExtBuffer.hpp  ReusableVector.hpp  SceneMaterialProcessor.hpp  SceneMeshProcessor.hpp  SceneProcessor.hpp  SharedDataContainer.hpp  Sol.hpp  Sol1.hpp  (+12 more)
app/src/: App.cpp  BasicMeshBundles.cpp  BasicModelInputs.cpp  BasicModels.cpp  BlinnPhongLightTechnique.cpp  CameraManagerSol.cpp  ColourTexture.cpp  ConfigManager.cpp  DefaultRenderPass.cpp  Engine.cpp  ExtensionManager.cpp  GLTFObject.cpp  GraphicsPipelineManager.cpp  GraphicsTechniqueExtensionBase.cpp  HeaderOnlyLibrariesInitialisation.cpp  IniParser.cpp  MaterialBase.cpp  MeshBoundImpl.cpp  MeshBounds.cpp  MeshBundleBase.cpp  MeshletMaker.cpp  Model.cpp  ModelBase.cpp  ModelContainer.cpp  ModelProcessor.cpp  RenderPassManager.cpp  RendererUtility.cpp  SceneMaterialProcessor.cpp  SceneMeshProcessor.cpp  SceneProcessor.cpp  SharedDataContainer.cpp  Sol.cpp  Sol1.cpp  SolHelperFunctions.cpp  SolMeshUtility.cpp  SolScene.cpp  TextureAtlas.cpp  TextureTools.cpp  TimeManager.cpp  WeightedTransparencyTechnique.cpp  (+1 more)
app/src/Exception/: Exception.cpp
app/templates/: ExceptionMessageBox.hpp  IGamepad.hpp  IKeyboard.hpp  IMouse.hpp  IThreadPool.hpp  InputManager.hpp  Renderer.hpp  Window.hpp
app/templates/modules/: GaiaInstance.hpp  LunaInstance.hpp  PlutoInstance.hpp  TerraInstance.hpp  VenusInstance.hpp
example/: CMakeLists.txt
example/includes/: App.hpp
example/src/: main.cpp
exports/: Exception.hpp  IModel.hpp  ISharedDataContainer.hpp
icon/: win32ExecutableIcon.rc
includes/: App.hpp  AppModules.hpp  BasicModelInputs.hpp  BasicModels.hpp  CameraManager.hpp  CameraManagerSol.hpp  ColourTexture.hpp  ConfigManager.hpp  Engine.hpp  GenericSingleton.hpp  IApp.hpp  IModelContainer.hpp  ISolModel.hpp  ITextureAtlas.hpp  IUploadBuffer.hpp  IniParser.hpp  InstanceManager.hpp  Model.hpp  ModelContainer.hpp  ModelProcessor.hpp  ObjectManager.hpp  SharedDataContainer.hpp  Sol.hpp  Sol1.hpp  SolConcepts.hpp  SolHelperFunctions.hpp  SolThrowMacros.hpp  TextureAtlas.hpp  TextureLoader.hpp  TextureTools.hpp  TimeManager.hpp  UploadBuffer.hpp  WordProcessing.hpp  resource.hpp
includes/Exceptions/: Exception.hpp
includes/Graphics/: PipelineManager.hpp  Window.hpp
includes/Impl/: App.hpp  BasicModels.hpp  Model.hpp  ModelContainer.hpp  TextureAtlas.hpp  UploadBuffer.hpp
includes/Input/: InputManager.hpp  Keyboard.hpp  Mouse.hpp
src/: App.cpp  AppModules.cpp  BasicModelInputs.cpp  BasicModels.cpp  CameraManager.cpp  CameraManagerSol.cpp  ColourTexture.cpp  ConfigManager.cpp  Engine.cpp  IniParser.cpp  InstanceCreationDefinition.cpp  InstanceManager.cpp  Model.cpp  ModelContainer.cpp  ModelProcessor.cpp  SharedDataContainer.cpp  Sol.cpp  SolHelperFunctions.cpp  StaticDefinition.cpp  TextureAtlas.cpp  TextureLoader.cpp  TextureTools.cpp  TimeManager.cpp  UploadBuffer.cpp  WordProcessing.cpp  main.cpp  resource.rc
src/Exception/: Exception.cpp
src/Graphics/: PipelineManager.cpp  Window.cpp
src/Input/: InputManager.cpp  Keyboard.cpp  Mouse.cpp
templates/: Exception.hpp  ExceptionMessageBox.hpp  GraphicsEngine.hpp  IGamepad.hpp  IGraphicsEngine.hpp  IKeyboard.hpp  IMouse.hpp  IThreadPool.hpp  InputManager.hpp  Renderer.hpp  SUtility.hpp  Window.hpp
templates/modules/: GaiaInstance.hpp  LunaInstance.hpp  PlutoInstance.hpp  TerraInstance.hpp  VenusInstance.hpp
test/: CMakeLists.txt
